word editing edits the entity insetad of vreating a new